--- a/500.html
+++ b/500.html
@@ -7,14 +7,13 @@
 
 <meta name="description" content="Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
 
-<link rel="stylesheet" href="/_bridgetown/static/index.DLPFSRKH.css" />
+<link rel="stylesheet" href="/_bridgetown/static/index.YY4EH7UP.css" />
 <script src="/_bridgetown/static/index.P6KJZRZR.js" defer></script>
 
 
   </head>
   <body class="default ">
     <header>
-  <img style="max-width: 15rem; width: 100%;" src="/images/logo.png" alt="Logo" />
 </header>
 
 
