deploy: d9fc3e925549283c9dac05de7763945456e56e53

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           시작하기
         </a>
 
-        <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto" href="#">
+        <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto" href="/정관.pdf" download="">
           커뮤니티와 함께하기
         </a>
       </div>
